[package]
name = "surfing-curl-Rust"
version = "debug"
edition = "2021"
authors = ["Geekstrange"]
description = "A CLI download tool with animated progress bars"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "stream"] }
tokio = { version = "1", features = ["full"] }
ctrlc = "3.4"
